# gtfs-differ

./: LAST_MODIFIED  README.md  pyproject.toml
.github/workflows/: diff_gtfs.yml  gtfs_differ.yml  run.yml
app/: config.py  diff_gtfs.py  download_gtfs.py  helpers.py  new_gtfs.py  prepare_gtfs.py  step.py
app/steps/: diff_gtfs.py  download_gtfs.py  new_gtfs.py  prepare_gtfs.py
data/gtfs/diff/agency/: updated..txt
data/gtfs/diff/calendar/: added.txt  removed.txt
data/gtfs/diff/calendar_attributes/: added.txt  removed.txt
data/gtfs/diff/calendar_dates/: added.txt  removed.txt
data/gtfs/diff/checkpoints/: removed.txt
data/gtfs/diff/directions/: added.txt  removed.txt
data/gtfs/diff/facilities/: added.txt  removed.txt
data/gtfs/diff/facilities_properties/: added.txt  removed.txt
data/gtfs/diff/feed_info/: added.txt  removed.txt
data/gtfs/diff/multi_route_trips/: added.txt  removed.txt
data/gtfs/new/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  facilities.txt  facilities_properties.txt  feed_info.txt  multi_route_trips.txt  route_patterns.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt  trips_properties.txt
data/gtfs/old/: calendar.txt  calendar_attributes.txt  calendar_dates.txt  checkpoints.txt  directions.txt  facilities_properties.txt  feed_info.txt  multi_route_trips.txt  pathways.txt  route_patterns.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt  trips_properties.txt
linkedService/: gtfsdiffer.json
trigger/: new gtfs.json
(+18 files in other folders)
